mule-user-guide/v/3.6/deploying.adoc
= Deploying
:keywords: deploy, deploying, cloudhub, on premises, on premise

Mule standalone can run multiple applications. This means you can include the same name spaces within different applications and they neither collide nor share information.

In effect, Mule is an app server. Mule checks for new apps (in the apps directory) and starts them.

Mule also restarts apps if it detects that the apps have changed, meaning you can drop a revised version of an existing, running application into the /apps directory, Mule stops the existing app and restarts using the new files. 

If Mule is embedded in another container, the link:/mule-management-console/v/3.7[Mule Management Console] cannot perform Autodiscovery or server restarts.

*Deploying Topics:*

* link:/mule-user-guide/v/3.6/starting-and-stopping-mule-esb[Starting and Stopping Mule ESB]
* link:/mule-user-guide/v/3.6/deployment-scenarios[Deployment Scenarios]
* link:/mule-user-guide/v/3.6/deploying-to-multiple-environments[Deploying to Multiple Environments]
* link:/mule-user-guide/v/3.6/mule-high-availability-ha-clusters[Mule High Availability HA Clusters]
* link:/mule-user-guide/v/3.6/mule-deployment-model[Mule Deployment Model]
* link:/mule-user-guide/v/3.6/mule-server-notifications[Mule Server Notifications]
* link:/mule-user-guide/v/3.6/profiling-mule[Profiling Mule]
* link:/mule-user-guide/v/3.6/hardening-your-mule-installation[Hardening your Mule Installation]
* link:/mule-user-guide/v/3.6/configuring-mule-for-different-deployment-scenarios[Configuring Mule for Different Deployment Scenarios]
* link:/mule-user-guide/v/3.6/preparing-a-gitignore-file[Preparing a gitignore File]
* link:/mule-user-guide/v/3.6/using-subversion-with-studio[Using Subversion with Studio]
