mule-user-guide/v/3.8/deploying.adoc
= Deploying Mule Runtime
:keywords: deploy, deploying, cloudhub, on premises, on premise


[NOTE]
This section deals with deploying to standalone instances of the Mule runtime. To take full advantage of managing and monitoring features, you can deploy to the same Mule runtime via the link:/runtime-manager[Runtime Manager]. See link:/runtime-manager/deployment-strategies[Deployment Strategies] for a deeper look at the different deployment alternatives offered by the platform.

Mule standalone can run multiple applications. This means you can include the same name spaces within different applications and they neither collide nor share information.

In effect, Mule is an app server. Mule checks for new apps (in the apps directory) and starts them.

Mule also restarts apps if it detects that the apps have changed, meaning you can drop a revised version of an existing, running application into the /apps directory, Mule stops the existing app and restarts using the new files. 

If Mule is embedded in another container, the link:/mule-management-console/v/3.8/[Mule Management Console] cannot perform Autodiscovery or server restarts.

== Deployment Topics

* To learn how to start and stop the Mule runtime instance see link:/mule-user-guide/v/3.8/starting-and-stopping-mule-esb[Starting and Stopping Mule]
* For runtime instance management see link:/runtime-manager[Runtime Manager] and for cloud deployment on MuleSoft servers see link:/runtime-manager/cloudhub[CloudHub]
* Get familiar with the link:/mule-user-guide/v/3.8/mule-deployment-model[Mule App Deployment Model]
* To deploy Mule on technologies, such as web app servers, see link:/mule-user-guide/v/3.8/deployment-scenarios[Mule Runtime Standalone Deployment Scenarios] and link:/mule-user-guide/v/3.8/configuring-mule-for-different-deployment-scenarios[Configuring Mule for Different Deployment Scenarios]
* link:/mule-user-guide/v/3.8/deploying-to-multiple-environments[Configuring Mule App for Deployment Anywhere]
* To set up a cluster of runtime instances providing reliable backup in case an instance goes offline, move on to link:/mule-user-guide/v/3.8/mule-high-availability-ha-clusters[Mule High Availability Clusters]

== See Also

* link:/mule-user-guide/v/3.8/mule-server-notifications[Mule Server Notifications]
* link:/mule-user-guide/v/3.8/profiling-mule[Profiling Mule]
* link:/mule-user-guide/v/3.8/hardening-your-mule-installation[Hardening your Mule Installation]




